<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:layout_height="match_parent"


    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    tools:showIn="@layout/app_bar_home_page"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomePage">


    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/homepage_gridview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnWidth="100dp"
        android:numColumns="auto_fit"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_marginTop="45dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:weightSum="2">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/filter_layout"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/ll_select_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/round_stoke_bg"
                android:weightSum="1"
                android:layout_alignRight="@+id/fl_subject_fragment"
                android:layout_alignEnd="@+id/fl_subject_fragment"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

                <TextView
                    android:id="@+id/toolbar_textview"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    style="@style/deep_dark_text"
                    android:text="@string/select_filter"
                    android:drawableRight="@drawable/arrow_dark_down"
                    android:drawablePadding="5dp" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/fl_subject_fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </FrameLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/frame_layout2"
            android:layout_weight="1">
            <!--android:layout_toEndOf="@+id/filter_layout">-->

            <LinearLayout
                android:id="@+id/ll_select_subject2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/round_stoke_bg"
                android:weightSum="1"
                android:layout_alignRight="@+id/fl_subject_fragment2"
                android:layout_alignEnd="@+id/fl_subject_fragment2"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    style="@style/deep_dark_text"
                    android:text="@string/select_sort"
                    android:drawableRight="@drawable/arrow_dark_down"
                    android:drawablePadding="5dp" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/fl_subject_fragment2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

            </FrameLayout>

        </RelativeLayout>
    </LinearLayout>


    <!--<Spinner-->
        <!--android:id="@+id/spinner2"-->
        <!--android:layout_width="176dp"-->
        <!--android:layout_height="40dp"-->
        <!--android:layout_gravity="right|top"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentEnd="true" />-->

</RelativeLayout>
