...
            android:layout_height="match_parent"
            android:background="@drawable/round_stoke_bg"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:orientation="horizontal">
            <ListView
                android:id="@+id/lv_menu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:scrollbars="none"
                android:layout_weight="2"
                android:cacheColorHint="@android:color/transparent"
                android:divider="@null"
                android:listSelector="@android:color/transparent"
                android:fadingEdge="none"/>
            <ListView
                android:id="@+id/lv_subject"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:scrollbars="none"
                android:listSelector="@android:color/transparent"
                android:cacheColorHint="@android:color/transparent"
...
