...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.06"
        android:paddingBottom="15dp">

        <ImageView
            android:id="@+id/image_itemdetail_view"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:paddingBottom="15dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

...
            android:id="@+id/relativeLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/rating_bar">

            <Button
                android:id="@+id/item_detail_wish"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:text="Add To Wishlist"
                android:background="@color/colorAccent"
                android:textColor="#ffffff"
                android:layout_gravity="center_horizontal|right"
...
