<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_wish" android:icon="@android:drawable/ic_menu_gallery"
            android:title="Wish List" />
        <item android:id="@+id/nav_cart" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="Shopping Cart" />
        <item android:id="@+id/nav_contact" android:icon="@android:drawable/ic_menu_manage"
            android:title="Contact Us" />
        <item android:id="@+id/nav_logout" android:icon="@android:drawable/ic_menu_send"
            android:title="Log Out" />
...
